# groutes_dash

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/: main.py  settings.py
backend/models/: __init__.py  visits.py
backend/services/: filtering_visits.py
backend/utils/: __init__.py  csv_utils.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
frontend/: app.py
frontend/components/: map.py  sidebar.py  stats.py
frontend/services/: api.py
notebooks/: eda.ipynb  eda.py  final_contract_generator.ipynb  final_contract_generator.py
