[project]
name = "groutes-dash"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "folium==0.16.0",
    "notebook==7.2.2",
    "numpy==1.26.3",
    "pandas==2.2.0",
    "passlib[bcrypt]==1.7.4",
    "plotly==5.17.0",
    "pyarrow==21.*",
    "pydantic==2.5.0",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "requests==2.31.0",
    "streamlit==1.28.1",
    "streamlit-folium==0.18.0",
    "uvicorn[standard]==0.24.0",
]
